# HublastQuiz

./: .gitignore  .gitignore copy  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/database/: database.py
backend/app/models/: models.py
backend/app/routes/: alternativas.py  fases.py  gerar_perguntas_ia.py  pdf_generate_routes.py  perguntas.py  salve_questions_ia.py  temas.py  teste_importacao.py
backend/app/schemas/: pdf_ia.py  schemas.py
backend/app/services/: analisy_questions_pdf.py  bot_models.py  llm_base.py
backend/app/services/bot/agents/: generate_questions.py
backend/app/settings/: settings.py
backend/app/tools/: extract_data_pdf.py  format_Json.py
frontend/: angular.json  package-lock.json  package.json
frontend/quiz-app/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/quiz-app/src/: styles.scss
frontend/quiz-app/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  app.routes.ts
frontend/quiz-app/src/app/create-quiz/: create-quiz.component.html  create-quiz.component.scss
frontend/quiz-app/src/app/home/: home.component.html  home.component.scss
frontend/quiz-app/src/app/models/: alternativa.model.ts  fase.model.ts  pergunta.model.ts  tema.model.ts
frontend/quiz-app/src/styles/: _variables.scss
frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/layout/: layout.component.html  layout.component.scss
frontend/src/app/services/: quiz-data.service.ts
(+27 files in other folders)
